@@ -7,6 +7,13 @@ var symbols = require('../../symbols')
 var { parseUrl } = require('../../parsers')
 var { getHTTPDestination } = require('../context')
 
+// Return true iff this is an HTTP 1.0 or 1.1 request.
+//
+// @param {http2.Http2ServerRequest} req
+function reqIsHTTP1 (req) {
+  return req && typeof req.httpVersion === 'string' && req.httpVersion.startsWith('1.')
+}
+
 module.exports = function (http2, agent, { enabled }) {
   if (agent._conf.instrumentIncomingHTTPRequests) {
     agent.logger.debug('shimming http2.createServer function')
@@ -46,9 +53,9 @@ module.exports = function (http2, agent, { enabled }) {
           shimmer.wrap(proto, 'end', wrapEnd)
         }
 
-        agent.logger.debug('intercepted request event call to http2.Server.prototype.emit')
+        agent.logger.debug('intercepted stream event call to http2.Server.prototype.emit')
 
-        var trans = agent.startTransaction()
+        const trans = agent.startTransaction()
         trans.type = 'request'
         trans.req = {
           headers,
@@ -67,6 +74,60 @@ module.exports = function (http2, agent, { enabled }) {
 
         eos(stream, function () {
           trans.end()
+        })
+      } else if (event === 'request' && reqIsHTTP1(stream)) {
+        // http2.createSecureServer() supports a `allowHTTP1: true` option.
+        // When true, an incoming client request that supports HTTP/1.x but not
+        // HTTP/2 will be allowed. It will result in a 'request' event being
+        // emitted. We wrap that here.
+        //
+        // Note that, a HTTP/2 request results in a 'stream' event (wrapped
+        // above) *and* a 'request' event. We do not want to wrap the
+        // compatibility 'request' event in this case. Hence the `reqIsHTTP1`
+        // guard.
+        const req = stream
+        const res = headers
+
+        agent.logger.debug('intercepted request event call to http2.Server.prototype.emit for %s', req.url)
+
+        var traceparent = req.headers.traceparent || req.headers['elastic-apm-traceparent']
+        var tracestate = req.headers.tracestate
+        const trans = agent.startTransaction(null, null, {
+          childOf: traceparent,
+          tracestate: tracestate
+        })
+        trans.type = 'request'
+        trans.req = req
+        trans.res = res
+
+        ins.bindEmitter(req)
+        ins.bindEmitter(res)
+
+        eos(res, function (err) {
+          if (trans.ended) return
+          if (!err) {
+            trans.end()
+            return
+          }
+
+          if (agent._conf.errorOnAbortedRequests) {
+            var duration = trans._timer.elapsed()
+            if (duration > (agent._conf.abortedErrorThreshold * 1000)) {
+              agent.captureError('Socket closed with active HTTP request (>' + agent._conf.abortedErrorThreshold + ' sec)', {
+                request: req,
+                extra: { abortTime: duration }
+              })
+            }
+          }
+
+          // Handle case where res.end is called after an error occurred on the
+          // stream (e.g. if the underlying socket was prematurely closed)
+          const end = res.end
+          res.end = function () {
+            const result = end.apply(this, arguments)
+            trans.end()
+            return result
+          }
         })
       }
 
